[gd_scene load_steps=12 format=3 uid="uid://dxbbd4gi67c6e"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_bb38g"]
[ext_resource type="Texture2D" uid="uid://cqypec27la4s8" path="res://Sprites/SpriteSheetPlayer1.png" id="1_xfi2w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbxk1"]
size = Vector2(16, 27)

[sub_resource type="CircleShape2D" id="CircleShape2D_k5nvx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_foxex"]
size = Vector2(14, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3uvtt"]
size = Vector2(20, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2gw1h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_udhlm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_foqpw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kl7qt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ogsuj"]
size = Vector2(14, 25)

[node name="Player" type="CharacterBody2D" groups=["HurtboxPlayer", "player"]]
collision_layer = 2
platform_wall_layers = 1
script = ExtResource("1_bb38g")
speed = 160
gravity = 500
can_move = true
jump_force = 230
dash_force_x = 300
dash_force_y = -300
unlocked_teleport = true
unlocked_dash = true
can_dash = true
dash_deceleration = -100
unlocked_double_jump = true
unlocked_wall_jump = true
wall_slide_speed = 50
walljump_force_x = 260
walljump_force_y = -260
can_double_jump = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_xfi2w")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_dbxk1")

[node name="Dash" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="CanDash" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Stuck" type="ShapeCast2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(0.1, 0.1)
shape = SubResource("CircleShape2D_k5nvx")
target_position = Vector2(0, 0)

[node name="CoyoteCast" type="RayCast2D" parent="."]
scale = Vector2(2.65, 1)
target_position = Vector2(0, 22)

[node name="Coyote_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="HurtboxPlayer" type="Area2D" parent="." groups=["HurtboxPlayer"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxPlayer"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_foxex")
debug_color = Color(0.647059, 0.72549, 0, 0.529412)

[node name="HitboxPlayer" type="Area2D" parent="." groups=["HitboxPlayer"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxPlayer"]
visible = false
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_3uvtt")
disabled = true
debug_color = Color(1, 0, 0, 0.419608)

[node name="ActiveHitbox" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallJumping" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="CoyoteWallJump" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CoyoteCastWallJumpRight" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(13, 2)
scale = Vector2(0.5, 1.3)
enabled = false
shape = SubResource("RectangleShape2D_2gw1h")
target_position = Vector2(0, 0.769231)

[node name="CoyoteCastWallJumpLeft" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(-13, 3)
scale = Vector2(0.5, 1.3)
enabled = false
shape = SubResource("RectangleShape2D_udhlm")
target_position = Vector2(0, -0.76923)

[node name="VerificatorRight" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(8, 3)
scale = Vector2(0.01, 1.3)
shape = SubResource("RectangleShape2D_foqpw")
target_position = Vector2(0, -0.76923)

[node name="VerificatorLeft" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(-8, 3)
scale = Vector2(0.01, 1.3)
shape = SubResource("RectangleShape2D_kl7qt")
target_position = Vector2(0, -0.769231)

[node name="floor_verification_tp" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="floor_verification_dash" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Jumping" type="Timer" parent="."]
one_shot = true

[node name="MapLimitsVerificator" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapLimitsVerificator"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_ogsuj")

[node name="Death" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Dash" to="." method="_on_dash_timeout"]
[connection signal="timeout" from="CanDash" to="." method="_on_can_dash_timeout"]
[connection signal="timeout" from="Coyote_timer" to="." method="_on_coyote_timer_timeout"]
[connection signal="area_entered" from="HurtboxPlayer" to="." method="_on_hurtbox_player_area_entered"]
[connection signal="area_entered" from="HitboxPlayer" to="." method="_on_hitbox_player_area_entered"]
[connection signal="timeout" from="ActiveHitbox" to="." method="_on_active_hitbox_timeout"]
[connection signal="timeout" from="WallJumping" to="." method="_on_wall_jumping_timeout"]
[connection signal="timeout" from="CoyoteWallJump" to="." method="_on_coyote_wall_jump_timeout"]
[connection signal="area_entered" from="MapLimitsVerificator" to="." method="_on_map_limits_verificator_area_entered"]
[connection signal="timeout" from="Death" to="." method="_on_death_timeout"]
